# CPP_TP

TP1/: CMakeLists.txt  Card.cpp  EnergyCard.cpp  Player.cpp  PokemonCard.cpp  TrainerCard.cpp  main.cpp
TP1/headers/: Card.h  EnergyCard.h  Player.h  PokemonCard.h  TrainerCard.h
TP2/: CMakeLists.txt  GaussianGenerator.cpp  SinWaveGenerator.cpp  StepGenerator.cpp  TimeSeriesDataset.cpp  TimeSeriesGenerator.cpp
TP2/headers/: GaussianGenerator.h  SinWaveGenerator.h  StepGenerator.h  TimeSeriesDataset.h  TimeSeriesGenerator.h
